_sass/_base.scss
// Base

body {
  font-family: $font-family-base;
}

// ::selection must be declared individually
@each $prefix in "::-moz-selection", "::selection" {
  #{$prefix} {
    background: $purple;
  }
}

.list-style-none,
.list-style-none > li {
  list-style: none;
}

// Normalize font weight
// and font style
h1, h2, h3, h4, h5, h6,
b, strong {
  font-weight: normal;
}

i, em, address, blockquote {
  font-style: normal;
}

blockquote {
  padding: 0;
  margin: 0;
}

// Code blocks
pre > code {
  display: block;
  font-family: $font-monospace;
}

abbr {
  text-decoration: none;
  border: none;
}

// Anchors
a,
.a-faux {
  color: $navy;
  text-decoration: none;
  border-bottom: 1px solid;
  &:hover {
    color: darken($navy, 5%);
  }
  &:active {
    color: darken($navy, 10%);
  }
}

// Accessibility utilities
.speak-none {
  speak: none;
}

.speak-normal {
  speak: normal;
}

// Writing Mode Language utilities
.vertical {
  -ms-writing-mode: tb-rl;
  -webkit-writing-mode: vertical-rl;
  -moz-writing-mode: vertical-rl;
  -ms-writing-mode: vertical-rl;
  writing-mode: vertical-rl;
}

.upright {
  // full-size-kana?
  -webkit-text-transform: full-width;
  text-transform: -webkit-full-width;
  text-transform: full-width;

  -webkit-text-orientation: upright;
  -moz-text-orientation: upright;
  -ms-text-orientation: upright;
  text-orientation: upright;
}

// Largest responsive header
.h0 {
  font-size: $h1 * 1.5;
  @media #{ $breakpoint-sm } {
    font-size: $h1 * 3.25;
  }
  @media #{ $breakpoint-md } {
    font-size: $h1 * 3.75;
  }
  @media #{ $breakpoint-lg } {
    font-size: $h1 * 4;
  }
}

// Styles specific to the Hannari section
.h0-hannari {
  // Using vh instead of vw like normal
  // Doesn’t seem like min font size is being respected
  // @media #{ $breakheight-xs } {
  //   font-size: $h2;
  // }

  // font-size: $h1;
  // font-size: calc( 24px + (150 - 24) * ( (100vh - 320px) / ( 950 - 320) ));
  font-size: $h1 * 2;
  @media #{ $breakpoint-md } {
    font-size: calc( 24px + (150 - 24) * ( (100vh - 320px) / ( 950 - 320) ));
  }


}

// @media #{ $breakpoint-xs } {
//   .h0-hannari {
//     // font-size: $h1;
//     font-size: calc( 24px + (125 - 24) * ( (100vh - 300) / ( 800 - 400) ));
//     outline: 2px solid green;
//   }
// }

// Styles specific to the Kokoro section
.h0-kokoro {
  font-size: calc( 32px + (48 - 32) * ( (100vw - 400px) / ( 800 - 400) ));
}

.height-nicomojiplus {
  height: 100px;
  @media #{ $breakpoint-sm } {
    height: 200px;
  }
  @media #{ $breakpoint-md } {
    height: 300px;
  }
}

.img-nikukyu-ladybug {
  &:before {
    content: attr(data-prefix);
    display: inline-block;
    transform-origin: right;
    font-size: $h4;
    transform: translate(50px, -30px) rotate(-40deg);
    position: absolute;
    @media #{ $breakpoint-md } {
      transform: translate(50px, 20px) rotate(-40deg);
    }
    @media #{ $breakpoint-lg } {
      transform: translate(60px, 10px) rotate(-40deg);
    }
  }
  img {
    transform: translate(25px, 50px);
    @media #{ $breakpoint-sm } {
      transform: translate(50px, 65px);
    }
    @media #{ $breakpoint-md } {
      transform: translate(50px, 75px);
    }
    @media #{ $breakpoint-lg } {
      transform: translate(50px, 100px);
    }
  }
}

// From Utility OpenType
.caps {
  text-transform: uppercase;
  -ms-font-feature-settings: "smcp", "c2sc";
  font-variant-caps: all-small-caps;
}

// Text shadows
.ts-label {
  text-shadow: 0 1px mix($white, $red, 50%),
               1px 1px 1px mix($white, $red, 25%),
              -1px 1px 1px mix($white, $red, 25%);
}

.bs-label {
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
}

// Pre
//
// Check if this is already a class in Basscss or there’s an alternative.
//
// Styleguide: base.pre
.pre {
  white-space: pre-wrap;
  word-break: break-all;
  overflow-x: auto;
}


// Overflow-x and -y
//
// Additional Basscss-like utilities for overflow
// on specific axis.
.overflow-x-hidden {
  overflow-x: hidden;
}

.overflow-y-hidden {
  overflow-y: hidden;
}

.overflow-x-scroll {
  overflow-x: scroll;
}

.overflow-y-scroll {
  overflow-y: scroll;
}

.overflow-scroll {
  overflow: scroll;
}

.overflow-hidden {
  overflow: hidden;
}

// Responsive positioning utilites
//
// No styleguide reference.
@media #{ $breakpoint-sm } {
  .sm-absolute { position: absolute }
  .sm-relative { position: relative }
}

@media #{ $breakpoint-md } {
  .md-absolute { position: absolute }
  .md-relative { position: relative }
}

@media #{ $breakpoint-lg } {
  .lg-absolute { position: absolute }
  .lg-relative { position: relative }
}

// Additional `.muted` utilities
//
// No styleguide reference.
.muted-light { opacity: 0.25; }
.muted-dark { opacity: 0.75; }

.text-indent {
  text-indent: $space-3;
}

// Additional `max-width` utilities
@media #{ $breakpoint-md } {
  .md-max-width-1 { max-width: $width-1 }
  .md-max-width-2 { max-width: $width-2 }
  .md-max-width-3 { max-width: $width-3 }
  .md-max-width-4 { max-width: $width-4 }
}

.max-width-5 { max-width: $width-4 * 1.5 }

// Additional rounded utilities
//
// No styleguide reference.
@media #{ $breakpoint-sm } {
  .sm-rounded-right  { border-radius: 0 $border-radius $border-radius 0 }
  .sm-rounded-left   { border-radius: $border-radius 0 0 $border-radius }
  .sm-rounded-bottom { border-radius: 0 0 $border-radius $border-radius }
  .sm-rounded-top    { border-radius: $border-radius $border-radius 0 0 }
}

// Mix blend mode
//
// No styleguide reference.
.blend-overlay {
  mix-blend-mode: overlay;
}

.blend-hardlight {
  mix-blend-mode: hard-light;
}

.blend-luminosity {
  mix-blend-mode: luminosity;
}

.blend-multiply {
  mix-blend-mode: multiply;
}

.blend-exclusion {
  mix-blend-mode: exclusion;
}

// Social media icons
//
// Hanging icons, currently only used in footer.
//
// Markup:
// <a href="#" class="icon inline-block border-none"><svg><!-- Icon --></svg></a>
//
// No styleguide reference.
.icon {
  margin-left: -20px;
  svg {
    transform: translate(-4px, 4px);
    width: 16px;
    height: 16px;
  }
}


// Hanging quotes
//
// TODO Ask Mariko if this is good practice.
// TODO Make quotes pseudo elements?
//
// Markup:
// <blockquote class="indent-n1">『日常的に使うための飽きのこない、それでいてちょっと気になるデザイン。』</blockquote>
//
// Styleguide: base.indent
.indent-n1 {
  text-indent: -1em;
}

